# Object_tracking_paths

./: EXPLANATIONS.md  PROGRESS.md  READING_PLAN.md  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml
conf/base/parameters/: data_processing.yml  detection.yml  lane.yml  tracking.yml  training.yml
src/cv_pipeline/: __init__.py  pipeline_registry.py
src/cv_pipeline/datasets/: __init__.py
src/cv_pipeline/models/: __init__.py
src/cv_pipeline/models/reid/: __init__.py
src/cv_pipeline/pipelines/bev_perception/: __init__.py  nodes.py  sparse4d_v3.py
src/cv_pipeline/pipelines/data_processing/: __init__.py  nodes.py
src/cv_pipeline/pipelines/depth_estimation/: __init__.py  nodes.py
src/cv_pipeline/pipelines/end_to_end/: __init__.py  nodes.py
src/cv_pipeline/pipelines/lane_detection/: __init__.py  nodes.py
src/cv_pipeline/pipelines/object_detection/: __init__.py  nodes.py
src/cv_pipeline/pipelines/path_construction/: __init__.py  nodes.py
src/cv_pipeline/pipelines/tracking/: __init__.py  nodes.py
src/cv_pipeline/pipelines/tracking_3d/: __init__.py  nodes.py
src/cv_pipeline/utils/: __init__.py  cmc.py  metrics.py  mlflow_utils.py  profiling.py  visualization.py  weights.py
tests/: __init__.py  conftest.py  test_3d_perception.py  test_cmc.py  test_datasets.py  test_integration.py  test_metrics.py  test_mlflow_utils.py  test_object_detection.py  test_pipeline_registry.py  test_profiling.py  test_reid.py  test_visualization.py  test_weights.py
