[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cv_pipeline"
version = "0.1.0"
description = "Kedro + MLFlow pipeline for object detection, tracking, and lane detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "kedro>=0.19.0",
    "kedro-mlflow>=0.13.0",
    "mlflow>=2.10.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "opencv-python>=4.9.0",
    "ultralytics>=8.2.0",
    "supervision>=0.20.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
cv-pipeline = "cv_pipeline.__main__:main"

[project.entry-points."kedro.hooks"]

[project.entry-points."kedro.project_commands"]

[project.entry-points."kedro.global_commands"]

[tool.kedro]
package_name = "cv_pipeline"
project_name = "CV Pipeline"
kedro_init_version = "0.19.0"
tools = ["mlflow", "viz"]
example_pipeline = "False"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
